--- a/recette.html
+++ b/recette.html
@@ -7,9 +7,10 @@
     <body>
         <h1>Recette de cookies</h1>
         <h2>Recette pour 6 personnes !</h2>
-        <img src="https://st.depositphotos.com/1177973/1320/i/450/depositphotos_13209135-stock-photo-chocolate-chips-cookies-isolated-on.jpg">
+        <img src="cookies-maison.jpeg">
        <h3>Ingrédients</h3>
-       <p><ol>
+       <p>
+            <ol>
                 <li>1 Oeuf</li>
                 <li>85g de scure</li>
                 <li>150g de farine</li>
@@ -17,11 +18,10 @@
                 <li>1 sachet de sucre vanillé</li>
                 <li>1 cuillère à café de levure chimique</li>
                 <li>1/2 cuillère à café de sel</li>
-       </ol></p>
-
-       <h3>Préparation</h3>
-
-       <ul>
+             </ol>
+        </p>
+        <h3>Préparation</h3>
+        <ul>
             <li>Laissez ramollir le beurre à température ambiante. Dans un saladier, malaxez-le avec le sucre.</li>
             <li>Ajoutez l'oeuf et éventuellement le sucre vanillé.</li>
             <li>Versez progressivement la farine, la levure chimique, le sel et les pépites de chocolat. Mélangez bien.</li>
